--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "hardhat": "^2.9.3",
     "ipfs-http-client": "^56.0.3",
     "next": "12.1.6",
+    "nft.storage": "^6.3.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.2",
+    "styled-components": "^5.3.5",
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
@@ -29,5 +32,8 @@
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
